# disdantic

./: .detect-secrets.scan.json  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  cst.yaml  diff.txt  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  paths-filter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _build_container.yml  _build_package.yml  _docs.yml  _link-check.yml  _quality.yml  _security.yml  _tests.yml  development.yml  development_cleanup.yml  nightly.yml  pipeline-development.yml  pipeline-main.yml  pipeline-nightly.yml  pipeline-release.yml  pipeline-weekly.yml  release.yml  util-cleanup.yml  util-pr-comment.yml
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/community/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/guides/: index.html
dev/reference/: index.html
docs/: index.md
docs/community/: index.md
docs/examples/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: cli-diagnostics.md  github-workflows.md  index.md  (+2 more)
examples/: README.md  conftest.py
examples/telemetry_and_settings/: README.md  main.py  pyproject.toml  requirements.txt
scripts/: README.md  check_links.py  generate_doc_tests.py  run_oci.py
tests/: README.md  conftest.py
v0.1.0/: 404.html  index.html  search.json  sitemap.xml
(+265 files in other folders)
