# Copyright 2026 markurtz
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "telemetry-and-settings-example"
version = "0.1.0"
description = "Telemetry and Settings Example for disdantic"
dependencies = [
    "disdantic",
    "opentelemetry-api>=1.15.0",
]

[tool.disdantic]
environment = "development"
default_schema_discriminator = "custom_type"
registry_auto_discovery = false
enable_schema_rebuilding = true
